# bid-management

./: netlify.toml
job-bid-history-manager/: .gitignore  ASTRILL_FIX.md  README.md  package-lock.json  package.json
job-bid-history-manager/apps/api/: .env.example  package.json  requirements.txt
job-bid-history-manager/apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
job-bid-history-manager/apps/desktop/src-tauri/: Cargo.toml  tauri.client.conf.json  tauri.conf.json
job-bid-history-manager/apps/desktop/src-tauri/icons/: icon.icns
job-bid-history-manager/apps/desktop/src-tauri/src/: client_config.rs  client_env.rs  client_log.rs  extension_install.rs  lib.rs  main.rs  proxy.rs  proxy_blocking.rs
job-bid-history-manager/apps/extension/: README.md  api.js  background.js  chatgpt-content.js  config.js  content-jd-selection.css  content-jd-selection.js  content.js  download-path.js  file-text-extract.js  groq-client.js  groq-keys.js  groq-keys.local.example.js  groq-router.js  local-drafts.js  local-extraction.js  local-prompt.js  local-storage.js  manifest.json  options.css  options.html  options.js  panel-capture-tab.js  panel-host.js  panel-jd-local-tab.js  panel-jd-tab.js  panel-preview-tab.js  panel.css  panel.html  panel.js  popup.css  popup.html  popup.js  prompt-defaults.js  resume-library.js  storage.js  toast.js  web-bridge.js
job-bid-history-manager/apps/web/: .env.example  README.md  next.config.ts  package.json
job-bid-history-manager/docs/: CLIENT.md  DEMO.md  FREE-TIER-SAFETY.md  LAN.md  PRE-DEPLOY.md  WEB-MIGRATION.md
job-bid-history-manager/scripts/: astrill-compare-report.ps1  buffer-shim.js  build-extension-docx.mjs  bundle-client.mjs  diagnose-lan.ps1  extension-docx-entry.ts  generate-icons.mjs  pack-extension.mjs  run-gateway-dev.mjs  run-with-cargo.mjs  sync-resume-prompts.mjs
(+282 files in other folders)
