[package]
name = "jbhm-desktop"
version = "0.1.0"
description = "Job Bid History Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "jbhm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
client = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
