[package]
name = "jbhm-desktop"
version = "0.1.0"
description = "Job Bid History Manager"
authors = ["you"]
edition = "2021"
default-run = "jbhm-desktop"

[lib]
name = "jbhm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "jbhm-desktop"
path = "src/main.rs"

[[bin]]
name = "jbhm-gateway"
path = "src/bin/jbhm-gateway.rs"
required-features = ["client"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
client = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
rouille = "3"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
axum = "0.8"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
